--- a/FirstApiApplication/FirstApiApplication.csproj
+++ b/FirstApiApplication/FirstApiApplication.csproj
@@ -167,6 +167,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Controllers\EmployeesController.cs" />
+    <Compile Include="Controllers\PracticalController.cs" />
     <Compile Include="Controllers_Actions.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
